--- a/Labs/Module 6 - Machine Learning/01 AutoML/scripts/credit_card_fraud.ipynb
+++ b/Labs/Module 6 - Machine Learning/01 AutoML/scripts/credit_card_fraud.ipynb
@@ -1,16 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "toc_visible": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -32,15 +20,15 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "3XuglahR0dlv"
       },
+      "outputs": [],
       "source": [
         "# Installs TPOT libraries.\n",
         "!pip install tpot"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -53,9 +41,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
       "metadata": {
         "id": "gBxSPYHsJ7Hj"
       },
+      "outputs": [],
       "source": [
         "# import libraries\n",
         "import numpy as np\n",
@@ -63,9 +53,7 @@
         "from tpot import TPOTClassifier\n",
         "from sklearn import preprocessing\n",
         "from sklearn.model_selection import train_test_split"
-      ],
-      "execution_count": 2,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -78,30 +66,18 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
       "metadata": {
-        "id": "aHkRl7NdOYfs",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 92
         },
+        "id": "aHkRl7NdOYfs",
         "outputId": "a1caa02d-b7ab-45ee-f950-a77254d6fde3"
       },
-      "source": [
-        "# access your local drive. Select:  ~/How-To--Machine-Learning/01 Credit Card/AutoML/data/TPOT.csv\n",
-        "from google.colab import files\n",
-        "uploaded = files.upload()\n",
-        "for fn in uploaded.keys():\n",
-        "  print('User uploaded file \"{name}\" with length {length} bytes'.format(\n",
-        "      name=fn, length=len(uploaded[fn])))"
-      ],
-      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "display_data",
           "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
             "text/html": [
               "\n",
               "     <input type=\"file\" id=\"files-3b221b7a-c66d-41f2-99fd-2bda85100fb0\" name=\"files[]\" multiple disabled\n",
@@ -286,48 +262,60 @@
               "};\n",
               "})(self);\n",
               "</script> "
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Saving TPOT.csv to TPOT.csv\n",
             "User uploaded file \"TPOT.csv\" with length 276497 bytes\n"
           ]
         }
+      ],
+      "source": [
+        "# access your local drive. Select:  ~/Workshop--Data-Integration/Labs/Module 6 - Machine-Learning/01 Credit Card/AutoML/data/TPOT.csv\n",
+        "from google.colab import files\n",
+        "uploaded = files.upload()\n",
+        "for fn in uploaded.keys():\n",
+        "  print('User uploaded file \"{name}\" with length {length} bytes'.format(\n",
+        "      name=fn, length=len(uploaded[fn])))"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
       "metadata": {
         "id": "7AqVkigoO7Yc"
       },
+      "outputs": [],
       "source": [
         "# Load the TPOT.csv dataset - Headless\n",
         "dataset = pd.read_csv('TPOT.csv', sep= ';', header=None)\n",
         "x = dataset.iloc[:, :-1].values\n",
         "y = dataset.iloc[:, 8].values"
-      ],
-      "execution_count": 4,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
       "metadata": {
         "id": "v9wQTM_6Mo-T"
       },
+      "outputs": [],
       "source": [
         "# backup option pulls dataset from GitHub repository.\n",
         "# url = 'https://github.com/jporeilly/How-To--Machine-Learning/blob/main/data/TPOT.csv' \n",
         "# dataset = pd.read_csv(url, sep= ';', header=None)\n",
         "# x = dataset.iloc[:, :-1].values\n",
         "# y = dataset.iloc[:, 8].values"
-      ],
-      "execution_count": 5,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -340,37 +328,37 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "VuTFh1I8M25U"
       },
+      "outputs": [],
       "source": [
         "# displays dataset and outputs independent x variables and dependent y variable\n",
         "dataset.head()"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "d2Ewbaeg2pVb"
       },
+      "outputs": [],
       "source": [
         "print (x)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "DrOKwScg2v6T"
       },
+      "outputs": [],
       "source": [
         "print (y)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -383,15 +371,15 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 9,
       "metadata": {
         "id": "Ht3fAR28lzIh"
       },
+      "outputs": [],
       "source": [
         "# adds column headers\n",
         "dataset.columns = ['first_time_customer','order_dollar_amount','num_items','age','web_order','total_transactions_to_date','hour_of_day','billing_shipping_zip_equal','reported_as_fraud_historic']"
-      ],
-      "execution_count": 9,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -404,15 +392,15 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "xzIanu7gm5co"
       },
+      "outputs": [],
       "source": [
         "# check column headers\n",
         "dataset.head()"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -425,9 +413,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 11,
       "metadata": {
         "id": "K2PYKxTj5GmS"
       },
+      "outputs": [],
       "source": [
         "# convert to numpy array and fit data\n",
         "x = dataset.iloc[:,0:-1].values\n",
@@ -435,9 +425,7 @@
         "x_scaled = min_max_scaler.fit_transform(x)\n",
         "X=np.asarray(x_scaled)\n",
         "y=np.asarray(dataset.iloc[:,-1])"
-      ],
-      "execution_count": 11,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -450,14 +438,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "pr0nunc_7YPS"
       },
+      "outputs": [],
       "source": [
         "dataset.head()"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -470,15 +458,15 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 13,
       "metadata": {
         "id": "NMpR33la6nVk"
       },
+      "outputs": [],
       "source": [
         "# split the dataset 75% used for test\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.75, random_state=None)"
-      ],
-      "execution_count": 13,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -491,18 +479,18 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "61rEjbvn7xB6"
       },
+      "outputs": [],
       "source": [
         "# TPOT Classifier\n",
         "tpot = TPOTClassifier(generations=1, verbosity=2, population_size=100, scoring='accuracy', n_jobs = -1, config_dict='TPOT light')\n",
         "tpot.fit(X_train, y_train)\n",
         "output_score=str(tpot.score(X_test, y_test))\n",
         "print(tpot.fitted_pipeline_)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -515,86 +503,42 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 15,
       "metadata": {
-        "id": "vpHMD0nOCfhn",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
         },
+        "id": "vpHMD0nOCfhn",
         "outputId": "00f95ca8-3d04-42ac-902c-3a50e3e31f0e"
       },
+      "outputs": [
+        {
+          "data": {
+            "application/javascript": "\n    async function download(id, filename, size) {\n      if (!google.colab.kernel.accessAllowed) {\n        return;\n      }\n      const div = document.createElement('div');\n      const label = document.createElement('label');\n      label.textContent = `Downloading \"${filename}\": `;\n      div.appendChild(label);\n      const progress = document.createElement('progress');\n      progress.max = size;\n      div.appendChild(progress);\n      document.body.appendChild(div);\n\n      const buffers = [];\n      let downloaded = 0;\n\n      const channel = await google.colab.kernel.comms.open(id);\n      // Send a message to notify the kernel that we're ready.\n      channel.send({})\n\n      for await (const message of channel.messages) {\n        // Send a message to notify the kernel that we're ready.\n        channel.send({})\n        if (message.buffers) {\n          for (const buffer of message.buffers) {\n            buffers.push(buffer);\n            downloaded += buffer.byteLength;\n            progress.value = downloaded;\n          }\n        }\n      }\n      const blob = new Blob(buffers, {type: 'application/binary'});\n      const a = document.createElement('a');\n      a.href = window.URL.createObjectURL(blob);\n      a.download = filename;\n      div.appendChild(a);\n      a.click();\n      div.remove();\n    }\n  ",
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "application/javascript": "download(\"download_c15cdf48-fa15-4af1-9938-d66287d824cf\", \"tpot_exported_credit_card_pipeline.py\", 1083)",
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
       "source": [
         "# export results to python\n",
         "tpot.export('tpot_exported_credit_card_pipeline.py')\n",
         "from google.colab import files\n",
         "files.download('tpot_exported_credit_card_pipeline.py')"
-      ],
-      "execution_count": 15,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ],
-            "application/javascript": [
-              "\n",
-              "    async function download(id, filename, size) {\n",
-              "      if (!google.colab.kernel.accessAllowed) {\n",
-              "        return;\n",
-              "      }\n",
-              "      const div = document.createElement('div');\n",
-              "      const label = document.createElement('label');\n",
-              "      label.textContent = `Downloading \"${filename}\": `;\n",
-              "      div.appendChild(label);\n",
-              "      const progress = document.createElement('progress');\n",
-              "      progress.max = size;\n",
-              "      div.appendChild(progress);\n",
-              "      document.body.appendChild(div);\n",
-              "\n",
-              "      const buffers = [];\n",
-              "      let downloaded = 0;\n",
-              "\n",
-              "      const channel = await google.colab.kernel.comms.open(id);\n",
-              "      // Send a message to notify the kernel that we're ready.\n",
-              "      channel.send({})\n",
-              "\n",
-              "      for await (const message of channel.messages) {\n",
-              "        // Send a message to notify the kernel that we're ready.\n",
-              "        channel.send({})\n",
-              "        if (message.buffers) {\n",
-              "          for (const buffer of message.buffers) {\n",
-              "            buffers.push(buffer);\n",
-              "            downloaded += buffer.byteLength;\n",
-              "            progress.value = downloaded;\n",
-              "          }\n",
-              "        }\n",
-              "      }\n",
-              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
-              "      const a = document.createElement('a');\n",
-              "      a.href = window.URL.createObjectURL(blob);\n",
-              "      a.download = filename;\n",
-              "      div.appendChild(a);\n",
-              "      a.click();\n",
-              "      div.remove();\n",
-              "    }\n",
-              "  "
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ],
-            "application/javascript": [
-              "download(\"download_c15cdf48-fa15-4af1-9938-d66287d824cf\", \"tpot_exported_credit_card_pipeline.py\", 1083)"
-            ]
-          },
-          "metadata": {}
-        }
       ]
     },
     {
@@ -608,15 +552,27 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "xcLhep898S_B"
       },
+      "outputs": [],
       "source": [
         "# output as JSON each pipeline\n",
         "print(tpot.evaluated_individuals_)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "toc_visible": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
