--- a/Labs/Module 7 - Use Cases/Machine Learning/AutoML/scripts/credit_card_fraud_fixed.ipynb
+++ b/Labs/Module 7 - Use Cases/Machine Learning/AutoML/scripts/credit_card_fraud_fixed.ipynb
@@ -6,13 +6,13 @@
         "id": "Q0iaOYCDIvu1"
       },
       "source": [
-        "# TPOT - Credit Card Fraud Detection (Enhanced)\n",
+        "# TPOT - Credit Card Fraud Detection (Fixed for TPOT 2.x)\n",
         "\n",
-        "This notebook demonstrates automated machine learning for credit card fraud detection using TPOT with best practices:\n",
+        "This notebook demonstrates automated machine learning for credit card fraud detection using TPOT 2.x with best practices:\n",
+        "- Fixed for TPOT 2.x API compatibility\n",
         "- Proper handling of imbalanced data\n",
         "- Comprehensive evaluation metrics\n",
         "- Data validation and exploration\n",
-        "- Feature importance analysis\n",
         "- Model comparison and visualization"
       ]
     },
@@ -83,13 +83,13 @@
         "from imblearn.over_sampling import SMOTE\n",
         "from collections import Counter\n",
         "\n",
-        "# Dask for distributed computing (optional)\n",
-        "from dask.distributed import Client, LocalCluster\n",
-        "\n",
         "# Set plotting style\n",
         "sns.set_style('whitegrid')\n",
         "plt.rcParams['figure.figsize'] = (10, 6)\n",
         "\n",
+        "# Check TPOT version\n",
+        "import tpot\n",
+        "print(f\"TPOT version: {tpot.__version__}\")\n",
         "print(\"All libraries imported successfully!\")"
       ]
     },
@@ -362,7 +362,7 @@
         "# Split dataset: 75% training, 25% testing (standard split)\n",
         "X_train, X_test, y_train, y_test = train_test_split(\n",
         "    X_scaled, y, \n",
-        "    test_size=0.25,      # Use 25% for testing (more standard)\n",
+        "    test_size=0.25,      # Use 25% for testing\n",
         "    random_state=42,     # For reproducibility\n",
         "    stratify=y           # Maintain class distribution in splits\n",
         ")\n",
@@ -391,7 +391,6 @@
       "outputs": [],
       "source": [
         "# Option: Apply SMOTE to balance training data\n",
-        "# Uncomment if you want to use SMOTE\n",
         "\n",
         "USE_SMOTE = True  # Set to True to enable SMOTE\n",
         "\n",
@@ -420,14 +419,7 @@
         "id": "IxXkBXkK7Scu"
       },
       "source": [
-        "> ### TPOT Classifier - Automated Machine Learning"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "#### Configuration Options"
+        "> ### TPOT Classifier Configuration (TPOT 2.x Compatible)"
       ]
     },
     {
@@ -436,17 +428,15 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Configuration\n",
-        "USE_DASK = False      # Set to True to use Dask distributed computing\n",
-        "GENERATIONS = 5       # Number of pipeline iterations (5-10 recommended)\n",
-        "POPULATION_SIZE = 20  # Number of pipelines per generation (20-50 recommended)\n",
-        "CV_FOLDS = 5          # Cross-validation folds\n",
-        "SCORING = 'roc_auc'   # Scoring metric for fraud detection (roc_auc, f1, recall)\n",
+        "# Configuration - Adjust these parameters\n",
+        "GENERATIONS = 5        # Number of pipeline iterations (3-10 recommended)\n",
+        "POPULATION_SIZE = 20   # Number of pipelines per generation (10-50 recommended)\n",
+        "CV_FOLDS = 5           # Cross-validation folds\n",
+        "SCORING = 'roc_auc'    # Scoring metric for fraud detection\n",
         "\n",
         "print(\"\\n\" + \"=\"*50)\n",
         "print(\"TPOT CONFIGURATION\")\n",
         "print(\"=\"*50)\n",
-        "print(f\"Use Dask:         {USE_DASK}\")\n",
         "print(f\"Generations:      {GENERATIONS}\")\n",
         "print(f\"Population Size:  {POPULATION_SIZE}\")\n",
         "print(f\"CV Folds:         {CV_FOLDS}\")\n",
@@ -459,7 +449,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#### Run TPOT Training"
+        "> ### Run TPOT Training (Fixed for TPOT 2.x)"
       ]
     },
     {
@@ -470,42 +460,19 @@
       },
       "outputs": [],
       "source": [
-        "# Initialize TPOT Classifier\n",
-        "if USE_DASK:\n",
-        "    # Option 1: With Dask distributed computing\n",
-        "    print(\"\\nInitializing Dask cluster...\")\n",
-        "    cluster = LocalCluster(\n",
-        "        n_workers=2,\n",
-        "        threads_per_worker=2,\n",
-        "        memory_limit='2GB'\n",
-        "    )\n",
-        "    client = Client(cluster)\n",
-        "    print(f\"Dask dashboard: {client.dashboard_link}\")\n",
-        "    \n",
-        "    tpot = TPOTClassifier(\n",
-        "        generations=GENERATIONS,\n",
-        "        population_size=POPULATION_SIZE,\n",
-        "        use_dask=True,\n",
-        "        n_jobs=1,\n",
-        "        verbosity=2,\n",
-        "        random_state=42,\n",
-        "        cv=CV_FOLDS,\n",
-        "        scoring=SCORING,\n",
-        "        config_dict='TPOT light'  # Faster, use 'TPOT MDR' for comprehensive search\n",
-        "    )\nelse:\n",
-        "    # Option 2: Without Dask (recommended for most cases)\n",
-        "    print(\"\\nInitializing TPOT without Dask...\")\n",
-        "    tpot = TPOTClassifier(\n",
-        "        generations=GENERATIONS,\n",
-        "        population_size=POPULATION_SIZE,\n",
-        "        n_jobs=-1,              # Use all CPU cores\n",
-        "        verbosity=2,\n",
-        "        random_state=42,\n",
-        "        cv=CV_FOLDS,\n",
-        "        scoring=SCORING,\n",
-        "        config_dict='TPOT light',\n",
-        "        early_stop=3            # Stop if no improvement for 3 generations\n",
-        "    )\n",
+        "# Initialize TPOT Classifier (TPOT 2.x compatible)\n",
+        "print(\"\\nInitializing TPOT Classifier...\")\n",
+        "\n",
+        "tpot = TPOTClassifier(\n",
+        "    generations=GENERATIONS,\n",
+        "    population_size=POPULATION_SIZE,\n",
+        "    cv=CV_FOLDS,\n",
+        "    scoring=SCORING,\n",
+        "    random_state=42,\n",
+        "    n_jobs=-1,              # Use all CPU cores\n",
+        "    # Note: 'verbosity' is removed - TPOT 2.x uses logging instead\n",
+        "    # Note: 'config_dict' and 'early_stop' may not be available in TPOT 2.x\n",
+        ")\n",
         "\n",
         "# Record start time\n",
         "start_time = datetime.now()\n",
@@ -513,25 +480,17 @@
         "print(\"\\nThis may take several minutes...\")\n",
         "print(\"=\"*50)\n",
         "\n",
-        "try:\n",
-        "    # Train TPOT\n",
-        "    tpot.fit(X_train_final, y_train_final)\n",
-        "    \n",
-        "    # Record end time\n",
-        "    end_time = datetime.now()\n",
-        "    training_duration = (end_time - start_time).total_seconds()\n",
-        "    \n",
-        "    print(\"\\n\" + \"=\"*50)\n",
-        "    print(\"TRAINING COMPLETED!\")\n",
-        "    print(\"=\"*50)\n",
-        "    print(f\"Training time: {training_duration:.2f} seconds ({training_duration/60:.2f} minutes)\")\n",
-        "    print(f\"\\nBest Pipeline Score ({SCORING}): {tpot.fitted_pipeline_.score(X_test, y_test):.4f}\")\n",
-        "    \n",
-        "finally:\n",
-        "    if USE_DASK:\n",
-        "        client.close()\n",
-        "        cluster.close()\n",
-        "        print(\"\\nDask cluster closed.\")"
+        "# Train TPOT\n",
+        "tpot.fit(X_train_final, y_train_final)\n",
+        "\n",
+        "# Record end time\n",
+        "end_time = datetime.now()\n",
+        "training_duration = (end_time - start_time).total_seconds()\n",
+        "\n",
+        "print(\"\\n\" + \"=\"*50)\n",
+        "print(\"TRAINING COMPLETED!\")\n",
+        "print(\"=\"*50)\n",
+        "print(f\"Training time: {training_duration:.2f} seconds ({training_duration/60:.2f} minutes)\")"
       ]
     },
     {
@@ -737,43 +696,6 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "wNKcBUXd8NxX"
-      },
-      "source": [
-        ">#### TPOT Evaluated Pipelines"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "xcLhep898S_B"
-      },
-      "outputs": [],
-      "source": [
-        "# Display all evaluated pipelines with scores\n",
-        "print(\"\\nAll Evaluated Pipelines:\")\n",
-        "print(\"=\"*60)\n",
-        "\n",
-        "# Sort pipelines by score\n",
-        "evaluated = tpot.evaluated_individuals_\n",
-        "sorted_pipelines = sorted(evaluated.items(), \n",
-        "                         key=lambda x: x[1]['internal_cv_score'], \n",
-        "                         reverse=True)\n",
-        "\n",
-        "print(f\"Total pipelines evaluated: {len(sorted_pipelines)}\\n\")\n",
-        "\n",
-        "# Show top 10 pipelines\n",
-        "print(\"Top 10 Pipelines:\")\n",
-        "for idx, (pipeline, scores) in enumerate(sorted_pipelines[:10], 1):\n",
-        "    print(f\"{idx}. Score: {scores['internal_cv_score']:.4f}\")\n",
-        "    print(f\"   Pipeline: {pipeline}\")\n",
-        "    print()"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "metadata": {},
       "source": [
         "> ### Generate Summary Report"
@@ -810,7 +732,6 @@
         "CV Folds:             {CV_FOLDS}\n",
         "Scoring Metric:       {SCORING}\n",
         "Training Time:        {training_duration:.2f} seconds ({training_duration/60:.2f} minutes)\n",
-        "Dask Enabled:         {USE_DASK}\n",
         "\n",
         "MODEL PERFORMANCE\n",
         "{'-'*70}\n",
@@ -876,9 +797,9 @@
         "files.download(model_filename)\n",
         "print(f\"📥 Downloaded: {model_filename}\")\n",
         "\n",
-        "# To load the model later:\n",
-        "# loaded_model = joblib.load('model_filename.pkl')\n",
-        "# predictions = loaded_model.predict(X_new)"
+        "print(\"\\n💡 To load the model later:\")\n",
+        "print(\"   loaded_model = joblib.load('model_filename.pkl')\")\n",
+        "print(\"   predictions = loaded_model.predict(X_new)\")"
       ]
     }
   ],
