--- a/Labs/Module 7 - Use Cases/Machine Learning/AutoML/scripts/credit_card_fraud.ipynb
+++ b/Labs/Module 7 - Use Cases/Machine Learning/AutoML/scripts/credit_card_fraud.ipynb
@@ -2,7 +2,19 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/jporeilly/Workshop--Data-Integration/blob/main/Copy_of_credit_card_fraud.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8Z5-eeHfbIi4"
+      },
       "source": [
         "# Credit Card Fraud Detection - H2O AutoML (Fast Version)\n",
         "\n",
@@ -17,7 +29,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "KEi-L5habIi5"
+      },
       "outputs": [],
       "source": [
         "# Install H2O\n",
@@ -28,7 +42,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "YhDNoua3bIi6"
+      },
       "outputs": [],
       "source": [
         "# Import libraries\n",
@@ -48,7 +64,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "fZ6DFLUqbIi7"
+      },
       "outputs": [],
       "source": [
         "# Upload data\n",
@@ -59,7 +77,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "lw4QrSKqbIi7"
+      },
       "outputs": [],
       "source": [
         "# Load data\n",
@@ -82,7 +102,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "nq-9HpmdbIi8"
+      },
       "outputs": [],
       "source": [
         "# Quick class distribution check\n",
@@ -102,7 +124,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "P8z4PQ9ZbIi8"
+      },
       "source": [
         "## Convert to H2O and Split Data"
       ]
@@ -110,7 +134,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "2OCWwsf_bIi9"
+      },
       "outputs": [],
       "source": [
         "# Convert to H2O frame\n",
@@ -131,7 +157,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "Ri7dsC5SbIi9"
+      },
       "source": [
         "## Run Fast H2O AutoML (Top 5 Models Only)\n",
         "\n",
@@ -144,7 +172,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "ff8ShJ8LbIi9"
+      },
       "outputs": [],
       "source": [
         "# Fast configuration\n",
@@ -166,7 +196,7 @@
         "    balance_classes=True,           # Handle imbalanced data\n",
         "    nfolds=5,                       # 5-fold CV\n",
         "    sort_metric='AUC',\n",
-        "    \n",
+        "\n",
         "    # Best algorithms for fraud detection\n",
         "    include_algos=[\n",
         "        'GBM',           # Gradient Boosting (usually best)\n",
@@ -175,7 +205,7 @@
         "        'DRF',           # Distributed Random Forest (tree-based)\n",
         "        'DeepLearning'   # Neural Network\n",
         "    ],\n",
-        "    \n",
+        "\n",
         "    verbosity='info'\n",
         ")\n",
         "\n",
@@ -189,7 +219,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "s2d-A1kLbIi-"
+      },
       "source": [
         "## Leaderboard"
       ]
@@ -197,7 +229,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "JOcXTUKZbIi-"
+      },
       "outputs": [],
       "source": [
         "# View leaderboard\n",
@@ -212,7 +246,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "gWLhBjxpbIi-"
+      },
       "source": [
         "## Best Model Performance"
       ]
@@ -220,7 +256,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "g_QxXTWubIi_"
+      },
       "outputs": [],
       "source": [
         "# Get best model\n",
@@ -244,7 +282,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "sCXS3_5VbIi_"
+      },
       "source": [
         "## Confusion Matrix"
       ]
@@ -252,7 +292,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "_Dl1wxfSbIi_"
+      },
       "outputs": [],
       "source": [
         "# Confusion matrix\n",
@@ -269,7 +311,7 @@
         "    fp = int(cm_table.iloc[0, 2])\n",
         "    fn = int(cm_table.iloc[1, 1])\n",
         "    tp = int(cm_table.iloc[1, 2])\n",
-        "    \n",
+        "\n",
         "    print(\"\\n💡 BREAKDOWN\")\n",
         "    print(f\"True Negatives:  {tn:>6,}  ✅\")\n",
         "    print(f\"False Positives: {fp:>6,}  ⚠️\")\n",
@@ -282,7 +324,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "ZakreDbabIi_"
+      },
       "source": [
         "## Feature Importance"
       ]
@@ -290,7 +334,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "KTfHBdBnbIi_"
+      },
       "outputs": [],
       "source": [
         "# Top features\n",
@@ -306,7 +352,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "7LMt5R8IbIjA"
+      },
       "source": [
         "## Save Model"
       ]
@@ -314,7 +362,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "31DRK6cTbIjA"
+      },
       "outputs": [],
       "source": [
         "# Save model\n",
@@ -328,7 +378,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "Wjs81_9bbIjA"
+      },
       "source": [
         "## Quick Summary Report"
       ]
@@ -336,7 +388,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "2hBwbb9tbIjA"
+      },
       "outputs": [],
       "source": [
         "# Generate summary\n",
@@ -380,7 +434,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "SbWIlNgPbIjA"
+      },
       "source": [
         "## 🎉 Complete!\n",
         "\n",
@@ -411,7 +467,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
