--- a/Labs/Module 7 - Use Cases/Machine Learning/AutoML/scripts/credit_card_fraud.ipynb
+++ b/Labs/Module 7 - Use Cases/Machine Learning/AutoML/scripts/credit_card_fraud.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jporeilly/Workshop--Data-Integration/blob/main/Copy_of_credit_card_fraud.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/jporeilly/Workshop--Data-Integration/blob/main/Labs/Module%207%20-%20Use%20Cases/Machine%20Learning/AutoML/scripts/credit_card_fraud.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -83,7 +83,7 @@
       "outputs": [],
       "source": [
         "# Load data\n",
-        "data = pd.read_csv('TPOT.csv', sep=';', header=None)\n",
+        "data = pd.read_csv('H2O.csv', sep=None, engine='python', header=None)\n",
         "\n",
         "data.columns = [\n",
         "    'first_time_customer', 'order_dollar_amount', 'num_items', 'age',\n",
